<resources>
    <string name="app_name1">HelloAppsTI22A4</string>
    <string name="project_hello">Project Hello World</string>
    <string name="project_count">Project Count</string>
    <string name="project_sianida">Project Sianida</string>
    <string name="project_twoactivity">Project TwoActivity</string>
    <string name="project_set_alarm">Project Set Alarm</string>
    <string name="project_maps">Project Maps</string>
    <string name="project_fibonacci">Project Fibonacci</string>
    <string name="hello_text">Hello World!</string>
    <string name="apakabar001">Bagaimana kabar anda hari ini?</string>
    <string name="Hello">Tinggal dimana sekarang!</string>
    <string name="app_name">Maul Apps</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">1</string>
    <string name="button_label_finish">Reset</string>
    <string name="toast_message">Bilangan Fibonancci</string>
    <string name="enter_fibonacci_limit">fMAX</string>
    <string name="button_back">Back</string>
    <string name="article_title">Kasus Sianida</string>
    <string name="article_subtitle">ICE COLD</string>
    <string name="Sinopsis_hunterx">Hunter X Hunter menceritakan tentang seorang anak bernama Gon Freecs, yang memiliki impian menjadi seorang Hunter demi bisa menemukan ayah yang menelantarkannya demi menjadi seorang Hunter Profesional. Ayah Gon menitipkan Gon sejak masih bayi kepada Bibi Mito, yang merupakan sepupu dari Ging Freecs (ayahnya Gon).</string>
    <string name="Sinopsis_bleach">"Bleach" adalah anime yang mengikuti kisah Ichigo Kurosaki, seorang remaja yang secara tak terduga mendapatkan kekuatan Soul Reaper untuk melawan roh jahat bernama Hollows. Bersama teman-temannya, Ichigo menjalani petualangan di dunia manusia dan Soul Society. Dengan aksi yang intens, pertumbuhan karakter, dan tema persahabatan, "Bleach" telah menjadi anime shonen yang populer.</string>
    <string name="Sinopsis_nanatsu">"Nanatsu no Taizai," atau "The Seven Deadly Sins," adalah anime yang mengikuti petualangan Meliodas, pemimpin Seven Deadly Sins, dalam pencariannya untuk mengembalikan kehormatan dan melawan kekuatan jahat yang mengancam kerajaan. Bersama dengan anggota Sins lainnya, dia menghadapi konspirasi, kekuatan magis, dan rahasia gelap dari masa lalu mereka. Dengan kombinasi aksi yang seru dan elemen fantasi, anime ini menggabungkan pertempuran epik dengan pengembangan karakter yang kuat.</string>
    <string name="Sinopsis_onepiece">"One Piece" adalah anime yang mengisahkan petualangan Monkey D. Luffy dan kru bajak lautnya dalam mencari harta legendaris, One Piece. Luffy mendapatkan kekuatan buah setan yang membuat tubuhnya bisa meregang seperti karet, dan dia bertekad menjadi Raja Bajak Laut. Bersama teman-temannya, mereka menjelajahi lautan, bertemu dengan berbagai karakter unik, dan menghadapi tantangan berbahaya, termasuk Marinir dan Yonko. Sementara itu, cerita ini juga mengungkapkan misteri dunia dan masa lalu Luffy. "One Piece" dikenal karena cerita epiknya, pertarungan seru, dan pesan tentang persahabatan dan keberanian.</string>
    <string name="Sinopsis_digimon">Digimon, singkatan dari Digital Monsters, mengisahkan petualangan sekelompok anak-anak yang secara tiba-tiba diangkut ke dunia digital yang penuh dengan makhluk-makhluk yang disebut Digimon. Setiap anak diberikan mitra Digimon yang unik, dan bersama-sama mereka berjuang untuk melindungi dunia digital dan dunia nyata dari ancaman jahat. Melalui persahabatan dan evolusi, Digimon dan anak-anaknya belajar mengatasi berbagai tantangan untuk menjaga keseimbangan antara kedua dunia.</string>
    <string name="Sinopsis_samurai">"Samurai X" atau "Rurouni Kenshin" adalah sebuah anime yang mengikuti perjalanan Himura Kenshin, seorang mantan pembunuh bayaran yang sekarang mencoba menebus dosa masa lalunya dengan mengembara sebagai samurai pengembara. Kenshin membawa pedang berbalik yang tidak tajam sebagai tanda bahwa ia tidak lagi mengambil nyawa manusia.

Ceritanya berfokus pada usahanya untuk menciptakan perdamaian di Era Meiji di Jepang setelah Restorasi Meiji. Kenshin bertemu dengan berbagai karakter yang membentuk kelompok yang kuat, dan cerita ini menyelidiki tema keadilan, persahabatan, dan pengampunan sambil menampilkan pertarungan pedang yang epik. Kenshin berusaha hidup dengan prinsip tidak membunuh dan melindungi orang-orang yang dicintainya, sambil menghadapi rintangan masa lalunya yang kelam.

"Samurai X" tidak hanya menarik perhatian penonton dengan aksi pedang yang seru, tetapi juga memberikan latar belakang karakter yang mendalam dan memotret perubahan zaman di Jepang pada periode transisi tersebut.</string>
    <string name="Sinopsis_naruto">"Naruto" adalah kisah tentang seorang ninja muda bernama Naruto Uzumaki, yang memiliki mimpi menjadi Hokage, pemimpin desa ninja terkuat. Namun, Naruto dibenci oleh sebagian besar penduduk desa karena dia menyimpan monster rubah ekor sembilan di dalam tubuhnya, yang pernah menghancurkan desa. Meskipun dihadapkan dengan ketidaksetujuan dan kesulitan, Naruto tetap gigih dan bersahabat dengan teman-teman sejawatnya, termasuk Sasuke Uchiha dan Sakura Haruno. Bersama-sama, mereka menghadapi berbagai tantangan, menjalani pelatihan ninja, dan berusaha melindungi desa dari ancaman yang muncul. Selama perjalanannya, Naruto belajar tentang persahabatan, keberanian, dan arti menjadi seorang pahlawan.</string>
    <string name="Sinopsis_dororo">"Dororo" adalah sebuah anime yang mengisahkan tentang seorang samurai bernama Hyakkimaru, yang lahir tanpa sebagian besar anggota tubuhnya karena ayahnya menjual organ-organ Hyakkimaru kepada roh jahat demi mendapatkan kekuasaan. Hyakkimaru bertualang dengan tujuan memulihkan tubuhnya yang hilang dengan membunuh roh jahat tersebut. Selama perjalanan, ia bertemu dengan seorang anak bernama Dororo yang menjadi temannya dan setia menemani dalam pencarian pembalasan dan pemulihan tubuhnya. Keduanya menghadapi berbagai macam roh jahat dan tantangan di dunia penuh kegelapan dan konflik samurai.</string>
    <string name="Sinopsis_spyxfamily">"Spy x Family" adalah sebuah anime yang mengisahkan tentang seorang mata-mata terkenal bernama Twilight, yang mendapatkan misi untuk menyusup ke dalam dunia elit politik. Untuk melaksanakan misinya, Twilight memutuskan untuk membentuk sebuah keluarga palsu dengan seorang gadis psikis bernama Anya dan seorang wanita pembunuh profesional bernama Yor. Ketika mereka mencoba menjalankan misi mereka, keluarga ini dihadapkan pada berbagai situasi lucu dan menegangkan, sambil berusaha menyembunyikan identitas mereka yang sebenarnya. Sinopsis singkat ini mencerminkan sentuhan komedi dan elemen mata-mata dalam cerita.</string>
    <string name="Sinopsis_rezero">"Re:Zero - Starting Life in Another World" adalah anime yang mengikuti petualangan Subaru Natsuki, seorang pemuda yang tiba-tiba terlempar ke dunia fantasi. Subaru memiliki kemampuan untuk hidup kembali setelah mati, namun ia harus menghadapi berbagai tantangan dan misteri yang mengelilingi kehidupan barunya. Dalam perjalanannya, Subaru berusaha untuk melindungi orang-orang yang dicintainya dan mengungkap rahasia dunia ini sambil menghadapi kesulitan emosional dan fisik yang besar.</string>
    <string name="Sinopsis_sao">"Sword Art Online (SAO)" adalah anime yang berlatar di dunia virtual reality di masa depan, di mana pemain terperangkap dalam permainan dan harus melalui berbagai tingkat untuk bertahan hidup. Kirito, protagonis utama, berusaha untuk keluar dari permainan dan menyelamatkan pemain lain. Selama perjalanan, dia menjalin hubungan dengan berbagai karakter, menjalani petualangan, dan menghadapi tantangan yang menguji keterampilan dan keberanian mereka dalam dunia virtual yang penuh dengan misteri dan bahaya.</string>
    <string name="Sinopsis_tate">"Tate no Yuusha no Nariagari" atau "The Rising of the Shield Hero" adalah cerita tentang Naofumi Iwatani, seorang pemuda yang dipanggil ke dunia paralel bersama tiga pahlawan lainnya. Naofumi, yang dipilih sebagai Pahlawan Perisai, mengalami pengkhianatan dan dituduh melakukan kejahatan yang tidak dia lakukan. Dengan hatinya yang penuh dendam, Naofumi harus bertarung sendirian dengan menggunakan perisainya sambil berusaha membersihkan namanya dan menghadapi ancaman dunia tersebut.</string>
    <string name="Sinopsis_slime">"Anime "That Time I Got Reincarnated as a Slime" mengisahkan tentang Satoru Mikami, seorang pria biasa yang terlahir kembali sebagai slime setelah terkena serangan misterius. Dengan kekuatan baru dan dunia fantasi yang penuh makhluk magis, ia berusaha membangun kerajaan untuk menciptakan kedamaian dan keadilan."</string>
    <string name="Sinopsis_overlord">"Overlord" adalah anime yang mengisahkan tentang pemain game virtual bernama Momonga yang tanpa sengaja terjebak di dalam dunia game tersebut setelah server ditutup. Momonga memutuskan untuk menjelajahi dunia ini yang penuh fantasi, sambil mencari cara untuk kembali ke dunianya. Namun, ia menyadari bahwa karakternya dalam game, Ainz Ooal Gown, masih mempertahankan kesadaran dan kekuatan luar biasa. Sebagai Overlord yang kuat, Momonga memutuskan untuk memanfaatkan situasi ini dan menjelajahi dunia untuk menemukan petunjuk tentang keberadaannya, sambil menghadapi berbagai tantangan dan pahlawan dalam perjalanan epiknya.</string>
    <string name="Sinopsis_nogame">"No Game No Life" adalah anime yang mengisahkan tentang dua saudara genius, Sora dan Shiro, yang merupakan pemain game profesional. Mereka secara misterius diundang ke dunia fantasi bernama Disboard, di mana segala konflik dan keputusan dipecahkan melalui permainan. Bersama-sama, mereka berusaha mengalahkan para dewa dan menjadi penguasa Disboard dengan kecerdasan dan keahlian gaming mereka yang luar biasa.</string>
    <string name="Sinopsis_tsukimichi">"Tsukimichi: Moonlit Fantasy" adalah anime yang mengisahkan tentang seorang remaja bernama Makoto Misumi yang secara tidak sengaja terlempar ke dunia fantasi setelah dipanggil oleh para dewa. Namun, kehidupannya di dunia baru tidak sesuai harapan, dan ia malah dianggap tidak berguna. Berjuang untuk bertahan, Makoto menemukan kekuatan uniknya dan memulai petualangan di dunia yang penuh dengan makhluk supernatural dan konspirasi dewa."</string>
    <string name="Sinopsis_isekaicheat">Anime "Isekai Cheat Magician" berkisah tentang dua siswa sekolah menengah, Taichi Nishimura dan Rin Azuma, yang tiba-tiba terlempar ke dunia fantasi. Di dunia baru mereka, keduanya menemukan bahwa mereka memiliki kekuatan sihir yang luar biasa, membuat mereka menjadi "Cheat Magician" yang sangat kuat. Mereka kemudian memulai petualangan mereka di dunia ini, menghadapi berbagai tantangan dan makhluk-makhluk fantastis sambil mencari cara untuk kembali ke dunia mereka yang asli.</string>
    <string name="Sinopsis_deadmarch">Death March to the Parallel World Rhapsody adalah cerita tentang seorang programmer komputer yang terjebak dalam dunia game fantasi setelah tidur panjang. Dia berusaha bertahan hidup di dunia baru ini dengan menggunakan keahlian pemrogramannya untuk mengatasi berbagai tantangan. Sementara dia berusaha hidup dengan damai, petualangan dan kesulitan muncul di sepanjang jalan, mengubah hidupnya secara tak terduga.</string>
</resources>